--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="styled-input">
             <span class="span">Date of Birth</span>
-            <input type="date" id="dBirth"  required>
+            <input type="date" id="dBirth" placeholder="dd/mm/yyyy"  required>
         </div>
 
         <div class="trigger-btns">
