--- a/index.html
+++ b/index.html
@@ -305,6 +305,105 @@
 
     </section>
 
+    <section class="main-table">
+        
+        <div class="3cols-equal bold-head">
+            <p>Present Name</p>
+            <p>Full Name at Birth</p>
+            <p>Date of Birth</p>
+        </div>
+
+        <div class="3cols-equal lined">
+            <p id="pName">Ali Meme</p>
+            <p id="fName">Ali Smith</p>
+            <p id="dBirth">June 16, 1966</p>
+        </div>
+
+        <div class="3cols lined">
+            <p>Life Path Number</p>
+            <p id="lPNum">3</p>
+        </div>
+
+        <div class="3cols lined">
+            <p>Born Day / Birthday Number</p>
+            <p id="bDayNum">11/2</p>
+        </div>
+
+        <div class="3cols lined">
+            <div class="f-row lined">
+                <p>Expression / Destiny</p>
+                <p id="eDNum">14/5</p>
+                <p></p>
+            </div>
+            <div class="s-row lined">
+                <p>Minor Expression / Destiny</p>
+                <p></p>
+                <p id="mEDNum">29/2</p>
+            </div>
+ 
+        </div>
+
+        <div class="3cols lined">
+            <div class="f-row lined">
+                <p>Soul Urge / Heart Desire</p>
+                <p id="sUHDNum">13/4</p>
+                <p ></p>
+            </div>
+            <div class="s-row lined">
+                <p>Minor Soul Urge / Heart's Desire</p>
+                <p></p>
+                <p id="mSUHDNum">16/7</p>
+            </div>
+ 
+        </div>
+
+        <div class="3cols lined">
+            <div class="f-row lined">
+                <p>Personality</p>
+                <p id="pNum">8</p>
+                <p></p>
+            </div>
+            <div class="s-row lined">
+                <p>Minor Personlaity</p>
+                <p></p>
+                <p id="mPNum">29/2</p>
+            </div>
+        </div>
+
+        <div class="2cols lined">
+            <p>Maturity</p>
+            <p id="mNum"></p>
+        </div>
+
+        <div class="2cols lined">
+            <p>Attitude</p>
+            <p id="aNum"></p>
+        </div>
+
+        <div class="2cols lined">
+            <p>Life Path / Expression Bridge</p>
+            <p id="lPEBNum"></p>
+        </div>
+
+        <div class="2cols lined">
+            <p>Heart's Desire / Personality Bridge</p>
+            <p id="hDPBNum"></p>
+        </div>
+
+        <div class="2cols lined">
+            <p>Maturity</p>
+            <p id="mNum"></p>
+        </div>
+
+        <div class="2cols lined">
+            <p>Maturity</p>
+            <p id="mNum"></p>
+        </div>
+
+
+
+    </section>
+
     </section>
 
     
