--- a/index.html
+++ b/index.html
@@ -338,44 +338,43 @@
         </div>
 
         <div class="cols3-nil line1">
-            <div class="f-row " >
+            <div class="f-row padlow " >
                 <p class="line1p">Expression / Destiny</p>
                 <p id="eDNum" class="line2p" >14/5</p>
                 <p class="line3p"></p>
             </div>
 
             <div class="s-row" >
-                <p class="minor line1p">Minor Expression / Destiny</p>
+                <p class="minor line1p textpad">Minor Expression / Destiny</p>
                 <p class="line2p"></p>
                 <p id="mEDNum" class="line3p" >29/2</p>
             </div>
  
         </div>
 
-        <div class="cols3 lined">
-            <div class="f-row lined">
-                <p>Soul Urge / Heart Desire</p>
-                <p id="sUHDNum">13/4</p>
-                <p ></p>
+        <div class="cols3-nil line1">
+            <div class="f-row padlow">
+                <p class="line1p">Soul Urge / Heart Desire</p>
+                <p id="sUHDNum" class="line2p">13/4</p>
+                <p class="line3p" ></p>
             </div>
-            <div class="s-row lined">
-                <p>Minor Soul Urge / Heart's Desire</p>
-                <p></p>
-                <p id="mSUHDNum">16/7</p>
+            <div class="s-row ">
+                <p class="line1p textpad">Minor Soul Urge / Heart's Desire</p>
+                <p class="line2p"></p>
+                <p id="mSUHDNum" class="line3p">16/7</p>
             </div>
- 
         </div>
 
-        <div class="cols3 lined">
-            <div class="f-row lined">
-                <p>Personality</p>
-                <p id="pNum">8</p>
-                <p></p>
+        <div class="cols3-nil line1">
+            <div class="f-row padlow">
+                <p class="line1p">Personality</p>
+                <p id="pNum" class="line2p">8</p>
+                <p class="line3p"></p>
             </div>
-            <div class="s-row lined">
-                <p>Minor Personlaity</p>
-                <p></p>
-                <p id="mPNum">29/2</p>
+            <div class="s-row ">
+                <p class="line1p textpad">Minor Personlaity</p>
+                <p class="line2p"></p>
+                <p id="mPNum" class="line3p"></p>
             </div>
         </div>
 
@@ -400,20 +399,75 @@
         </div>
 
         <div class="cols2 lined">
-            <p>Maturity</p>
-            <p id="mNum"></p>
+            <p>Rational Thought</p>
+            <p id="rtNum"></p>
         </div>
 
         <div class="cols2 lined">
-            <p>Maturity</p>
-            <p id="mNum"></p>
+            <p>Balance Number</p>
+            <p id="bnNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Subconscious Self</p>
+            <p id="ssNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Karmic Lesson</p>
+            <p id="klNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Karmic Debt</p>
+            <p id="kdNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Hidden Passion</p>
+            <p id="hpNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Hereditary Name</p>
+            <p id="hnNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Cornerstone</p>
+            <p id="cstNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Physical Plane of Expression</p>
+            <p id="ppoeNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Mental Plane of Expression</p>
+            <p id="mpoeNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Intuitive Plane of Expression</p>
+            <p id="ipoeNum"></p>
+        </div>
+
+        <div class="cols2 lined">
+            <p>Emotional Plane of Expression</p>
+            <p id="epoeNum"></p>
+        </div>
+
+        <div class="cols2 line">
+            <p class="head1">Chapters of Life: Period Cycle</p>
+            <p class="head2"></p>
         </div>
 
 
 
     </section>
 
-    <section>
+    <!-- <section>
 
         <div class="cols3-equal bold-head">
             <p >Present Name</p>
@@ -480,7 +534,7 @@
                 <td id="msuhdID"></td>
             </tr>
         </table>
-    </section>
+    </section> -->
 
     </section>
 
