--- a/index.html
+++ b/index.html
@@ -328,8 +328,15 @@
         </div>
 
         <div class="cols2 top-margin lined">
-            <p>Life Path Number</p>
-            <p id="lPNum">3</p>
+            <details>
+                <summary>
+                        <p class="label">Life Path number</p>
+                        <p class="result" id="lpResult">12/3</p>
+                        <p id="lPNum">3</p>
+                </summary>
+                <p id="lpText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
+            </details>
+            
         </div>
 
         <div class="cols2 lined">
