--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <p id="dBirth">June 16, 1966</p>
         </div>
 
-        <div class="cols2 top-margin lined">
+        <div class="  lined">
             <details>
                 <summary>
                         <p class="label">Life Path number</p>
@@ -339,38 +339,64 @@
             
         </div>
 
-        <div class="cols2 lined">
-            <p>Born Day / Birthday Number</p>
-            <p id="bDayNum">11/2</p>
+
+
+        <div class=" lined">
+            <details>
+                <summary class="cols2">
+                        <p class="label">Born Day/ Birthday Number</p>
+                        <p class="result" id="bDayNum">11/2</p>
+                </summary>
+                <p id="bDayText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
+            </details>
         </div>
 
-        <div class="cols3-nil line1">
-            <div class="f-row padlow " >
-                <p class="line1p">Expression / Destiny</p>
-                <p id="eDNum" class="line2p" >14/5</p>
-                <p class="line3p"></p>
-            </div>
+        <details>
+            <summary class="cols2-nil">
+                <div class=" f-row " >
+                    <p class="">Expression / Destiny</p>
+                    <p class=" textpad">Minor Expression / Destiny</p>
+                    <p class=""></p>
+                </div>
 
-            <div class="s-row" >
-                <p class="minor line1p textpad">Minor Expression / Destiny</p>
-                <p class="line2p"></p>
-                <p id="mEDNum" class="line3p" >29/2</p>
-            </div>
- 
-        </div>
+                <div class="cols-half">
+                    <div class="f-row">
+                        <p id="eDNum"  >14/5</p>
+                        <p ></p>
+                    </div>
+                    <div class="s-row padlow" >
+                        <p></p>
+                        <p id="mEDNum" >29/2</p>                
+                    </div>
+                </div>
 
-        <div class="cols3-nil line1">
-            <div class="f-row padlow">
-                <p class="line1p">Soul Urge / Heart Desire</p>
-                <p id="sUHDNum" class="line2p">13/4</p>
-                <p class="line3p" ></p>
-            </div>
-            <div class="s-row ">
-                <p class="line1p textpad">Minor Soul Urge / Heart's Desire</p>
-                <p class="line2p"></p>
-                <p id="mSUHDNum" class="line3p">16/7</p>
-            </div>
-        </div>
+            </summary>
+            <p id="emeText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
+        </details>
+
+
+        <details>
+            <summary class="cols2-nil">
+                <div class=" f-row " >
+                    <p >Soul Urge / Heart Desire</p>
+                    <p class="textpad">Minor Soul Urge / Heart's Desire</p>
+                    
+                </div>
+
+                <div class="cols-half">
+                    <div class="f-row">
+                        <p id="sUHDNum" >13/4</p>
+                        <p ></p>
+                    </div>
+                    <div class="s-row padlow" >
+                        <p></p>
+                        <p id="mSUHDNum" >16/7</p>               
+                    </div>
+                </div>
+
+            </summary>
+            <p id="suhdText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
+        </details>
 
         <div class="cols3-nil line1">
             <div class="f-row padlow">
