--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </div>
 
         <div class="cols3-equal lined" id="cols3">
-            <p id="pName">Ali Meme</p>
-            <p id="fName">Ali Smith</p>
-            <p id="dBirth">June 16, 1966</p>
+            <p id="ppName">Ali Meme</p>
+            <p id="ffName">Ali Smith</p>
+            <p id="ddBirth">June 16, 1966</p>
         </div>
 
         <div class="  lined">
