--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="cols3-equal lined" id="cols3">
-            <p id="ppName">Ali Meme</p>
+            <p id="ccName">Ali Meme</p>
             <p id="ffName">Ali Smith</p>
             <p id="ddBirth">June 16, 1966</p>
         </div>
