--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
         </div>
 
         <div class="cols3-equal lined" id="cols3">
-            <p id="ccName">Ali Meme</p>
-            <p id="ffName">Ali Smith</p>
-            <p id="ddBirth">June 16, 1966</p>
+            <p id="ccName"></p>
+            <p id="ffName"></p>
+            <p id="ddBirth"></p>
         </div>
 
         <div class="  lined">
             <details>
                 <summary class="cols2">
                         <p class="label">Life Path number</p>
-                        <p class="result" id="lpNum">12/3</p>
+                        <p class="result" id="lpNum"></p>
                 </summary>
                 <p id="lpText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
             </details>
@@ -76,7 +76,7 @@
             <details>
                 <summary class="cols2">
                         <p class="label">Born Day/ Birthday Number</p>
-                        <p  id="bdNum">11/2</p>
+                        <p  id="bdNum"></p>
                 </summary>
                 <p id="bdText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas non blanditiis sint ipsa facilis corporis, laborum alias rerum, nulla eligendi laudantium consectetur neque, sapiente ex! Recusandae sequi iste consectetur quaerat eos. Excepturi, voluptas! Corrupti eveniet eligendi perspiciatis ex earum illum, quisquam explicabo! Eius aliquid ipsum unde, quia animi reiciendis harum.</p>
             </details>
@@ -91,12 +91,12 @@
                 </div>
                 <div class="cols-half">
                     <div class="f-row">
-                        <p id="edNum"  >14/5</p>
+                        <p id="edNum"  ></p>
                         <p ></p>
                     </div>
                     <div class="s-row padlow" >
                         <p></p>
-                        <p id="medNum" >29/2</p>                
+                        <p id="medNum" ></p>                
                     </div>
                 </div>
             </summary>
@@ -112,12 +112,12 @@
                 </div>
                 <div class="cols-half">
                     <div class="f-row">
-                        <p id="suhdNum" >13/4</p>
+                        <p id="suhdNum" ></p>
                         <p ></p>
                     </div>
                     <div class="s-row padlow" >
                         <p></p>
-                        <p id="msuhdNum" >16/7</p>               
+                        <p id="msuhdNum" ></p>               
                     </div>
                 </div>
 
@@ -133,12 +133,12 @@
                 </div>
                 <div class="cols-half">
                     <div class="f-row">
-                        <p id="pNum" >8</p>
+                        <p id="pNum" ></p>
                         <p ></p>
                     </div>
                     <div class="s-row padlow" >
                         <p></p>
-                        <p id="mPNum" class=""></p>             
+                        <p id="mpNum" class=""></p>             
                     </div>
                 </div>
             </summary>
