--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </form>
 
     
-    <section class="main-table">
+    <section class="main-table hide">
         
         <div class="bold-head" >
             <p >Present Name</p>
