--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
         <div class="styled-input">
             <span class="span">Date of Birth</span>
-            <input type="date" id="dBirth" placeholder="dd/mm/yyyy"  required>
+            <input type="number" id="month" placeholder="month"  required>
+            <input type="number" id="day" placeholder="day"  required>
+            <input type="number" id="year" placeholder="year"  required>
         </div>
 
         <div class="trigger-btns">
@@ -51,8 +53,7 @@
     <section class="main-table hide">
         
         <div class="bold-head" >
-            <p >Present Name</p>
-            <p>Full Name at Birth</p>
+            <p >Present Name</p> <p>Full Name at Birth</p>
             <p>Date of Birth</p>
         </div>
 
