--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 <body>
     
     <header id="header">
-        <!-- <button>
-            <i class="fa-sharp fa-solid fa-chevron-left"></i>
-        </button> -->
         <h1>Chart Calculator</h1>
     </header>
 
@@ -53,7 +50,8 @@
     <section class="main-table hide">
         
         <div class="bold-head" >
-            <p >Present Name</p> <p>Full Name at Birth</p>
+            <p >Present Name</p> 
+            <p>Full Name at Birth</p>
             <p>Date of Birth</p>
         </div>
 
@@ -312,6 +310,102 @@
             <p class="head1">Chapters of Life: Period Cycle</p>
             <p class="head2"></p>
         </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">First</span> Period Cycle</p>
+            <p > from birth to age _</p>
+            <p ></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">Second</span> Period Cycle</p>
+            <p > from age _ to _</p>
+            <p ></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">Third</span> Period Cycle</p>
+            <p > from birth to age _</p>
+            <p ></p>
+        </div>
+
+
+
+        <div class="cols2 line">
+            <p class="head1">Season of Your Life: Pinnacle #</p>
+            <p class="head2"></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">First</span> Pinnacle</p>
+            <p > from birth to age _</p>
+            <p ></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">Second</span> Pinncale</p>
+            <p > from age _ to _</p>
+            <p ></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">Third</span> Pinnacle</p>
+            <p > from age _ to _</p>
+            <p ></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">Fourth</span> Pinnacle</p>
+            <p > from age _ and on</p>
+            <p ></p>
+        </div>
+
+        <div class="cols2 line">
+            <p class="head1">Your Challenges in Life : </p>
+            <p class="head2"></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">First</span> Challenge</p>
+            <p > from birth to age 30</p>
+            <p ></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">Second</span> Challenge</p>
+            <p > from 30 to age 60</p>
+            <p ></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">Third</span> Challenge</p>
+            <p > from 35 all your life</p>
+            <p ></p>
+        </div>
+
+        <div class="cols3-equal lined" id="cols3">
+            <p > <span class="blue">Fourth</span> Challenge</p>
+            <p > from 35 to age death</p>
+            <p ></p>
+        </div>
+
+
+        <p>SOUL MEET NUMEROLOGY</p>
+
+        <h3>Yearly Forecast Cycles at _ years of age - 2022</h3>
+
+        <div class="cols8-equal lined" id="cols3">
+            <p >Physical <br>Transit</p>
+            <p ></p>
+            <p >Mental <br>Transit</p>
+            <p ></p>
+            <p >Spiritual <br>Transit</p>
+            <p ></p>
+            <p >Essence <br>Cycle</p>
+            <p ></p>
+        </div>
+
+        <h3>Yearly/Monthly/Daily Personal Cylces</h3>
 
 
 
