--- a/index.html
+++ b/index.html
@@ -34,8 +34,54 @@
 
         <div class="styled-input">
             <span class="span">Date of Birth</span>
-            <input type="number" id="month" placeholder="month"  required>
-            <input type="number" id="day" placeholder="day"  required>
+            <select  id="month" required>
+                <option value="1">January</option>
+                <option value="2">February</option>
+                <option value="3">March</option>
+                <option value="4">April</option>
+                <option value="5">May</option>
+                <option value="6">June</option>
+                <option value="7">July</option>
+                <option value="8">August</option>
+                <option value="9">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
+            </select>
+
+            <select  id="day" required>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
+            </select>
             <input type="number" id="year" placeholder="year"  required>
         </div>
 
@@ -313,19 +359,19 @@
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">First</span> Period Cycle</p>
-            <p > from birth to age _</p>
+            <p id="fpCycle" > from birth to age _</p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Second</span> Period Cycle</p>
-            <p > from age _ to _</p>
+            <p id="spCycle"> from age _ to _</p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Third</span> Period Cycle</p>
-            <p > from birth to age _</p>
+            <p id="tpCycle"> from age _ and on</p>
             <p ></p>
         </div>
 
@@ -338,25 +384,25 @@
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">First</span> Pinnacle</p>
-            <p > from birth to age _</p>
+            <p id="fPin"> from birth to age _</p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Second</span> Pinncale</p>
-            <p > from age _ to _</p>
+            <p id="sPin"> from age _ to _</p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Third</span> Pinnacle</p>
-            <p > from age _ to _</p>
+            <p id="tPin"> from age _ to _</p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Fourth</span> Pinnacle</p>
-            <p > from age _ and on</p>
+            <p id="ftPin"> from age _ and on</p>
             <p ></p>
         </div>
 
@@ -367,34 +413,34 @@
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">First</span> Challenge</p>
-            <p > from birth to age 30</p>
+            <p id="fCha"> from birth to age 30</p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Second</span> Challenge</p>
-            <p > from 30 to age 60</p>
+            <p id="sCha"> from 30 to age 60</p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Third</span> Challenge</p>
-            <p > from 35 all your life</p>
+            <p id="tCha"> from 35 all your life</p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Fourth</span> Challenge</p>
-            <p > from 35 to age death</p>
+            <p id="ftCha"> from 35 to age death</p>
             <p ></p>
         </div>
 
 
-        <p>SOUL MEET NUMEROLOGY</p>
+        <p id="small">SOUL MEET NUMEROLOGY</p>
 
-        <h3>Yearly Forecast Cycles at _ years of age - 2022</h3>
+        <h3 id="yforecast">Yearly Forecast Cycles at ____ years of age - 2022</h3>
 
-        <div class="cols8-equal lined" id="cols3">
+        <div class="cols8 lined" >
             <p >Physical <br>Transit</p>
             <p ></p>
             <p >Mental <br>Transit</p>
@@ -405,8 +451,25 @@
             <p ></p>
         </div>
 
-        <h3>Yearly/Monthly/Daily Personal Cylces</h3>
+        <h3 id="ymdp">Yearly/Monthly/Daily Personal Cylces</h3>
 
+        <div class="bold-head" id="force" >
+            <p >Personal Year</p> 
+            <p>Personal Month</p>
+            <p>Personal Day</p>
+        </div>
+
+        <div class="cols3-equal lined" >
+            <p >2022</p>
+            <p >February</p>
+            <p >Thursday</p>
+        </div>
+
+        <div class="cols3-equal lined">
+            <p ></p>
+            <p ></p>
+            <p ></p>
+        </div>
 
 
     </section>
