--- a/index.html
+++ b/index.html
@@ -413,25 +413,25 @@
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">First</span> Challenge</p>
-            <p id="fCha"> from birth to age 30</p>
+            <p id="fCha"></p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Second</span> Challenge</p>
-            <p id="sCha"> from 30 to age 60</p>
+            <p id="sCha"></p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Third</span> Challenge</p>
-            <p id="tCha"> from 35 all your life</p>
+            <p id="tCha"></p>
             <p ></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Fourth</span> Challenge</p>
-            <p id="ftCha"> from 35 to age death</p>
+            <p id="ftCha"></p>
             <p ></p>
         </div>
 
