--- a/index.html
+++ b/index.html
@@ -360,19 +360,19 @@
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">First</span> Period Cycle</p>
             <p id="fpCycle" > from birth to age _</p>
-            <p ></p>
+            <p id="fpCycleNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Second</span> Period Cycle</p>
             <p id="spCycle"> from age _ to _</p>
-            <p ></p>
+            <p id="spCycleNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Third</span> Period Cycle</p>
             <p id="tpCycle"> from age _ and on</p>
-            <p ></p>
+            <p id="tpCycleNum"></p>
         </div>
 
 
@@ -385,25 +385,25 @@
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">First</span> Pinnacle</p>
             <p id="fPin"> from birth to age _</p>
-            <p ></p>
+            <p id="fPinNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Second</span> Pinncale</p>
             <p id="sPin"> from age _ to _</p>
-            <p ></p>
+            <p id="sPinNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Third</span> Pinnacle</p>
             <p id="tPin"> from age _ to _</p>
-            <p ></p>
+            <p id="tPinNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Fourth</span> Pinnacle</p>
             <p id="ftPin"> from age _ and on</p>
-            <p ></p>
+            <p id="ftPinNum"></p>
         </div>
 
         <div class="cols2 line">
@@ -414,25 +414,25 @@
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">First</span> Challenge</p>
             <p id="fCha"></p>
-            <p ></p>
+            <p id="fChaNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Second</span> Challenge</p>
             <p id="sCha"></p>
-            <p ></p>
+            <p id="sChaNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Third</span> Challenge</p>
             <p id="tCha"></p>
-            <p ></p>
+            <p id="tChaNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Fourth</span> Challenge</p>
             <p id="ftCha"></p>
-            <p ></p>
+            <p id="ftChaNum"></p>
         </div>
 
 
@@ -440,13 +440,13 @@
 
         <div class="cols8 lined" >
             <p >Physical <br>Transit</p>
-            <p ></p>
+            <p id="phtrNum"></p>
             <p >Mental <br>Transit</p>
-            <p ></p>
+            <p id="metrNum"></p>
             <p >Spiritual <br>Transit</p>
-            <p ></p>
+            <p id="sptrNum"></p>
             <p >Essence <br>Cycle</p>
-            <p ></p>
+            <p id="escyNum"></p>
         </div>
 
         <h3 id="ymdp">Yearly/Monthly/Daily Personal Cylces</h3>
