--- a/test.html
+++ b/test.html
@@ -257,7 +257,48 @@
 
 
 
+console.log(count)
+    if (Number(count) === 10) {
+        sum = 1;
+    } else if (Number(count) < 10) {
+        sum = Number(count)
+    } else if (Number(count) === 11 || Number(count) === 22  || Number(count) === 33){
+        
+        sum = Number(count) 
+    }else if (Number(count) > 10) {
+        mSplit = String(count).split('');
+        sum = eval(mSplit.join('+'));
+    } 
 
+    if (Number(dayString) === 10) {
+        edHold = 1;
+    } else if (Number(dayString) < 10) {
+        edHold = Number(dayString)
+    } else if (Number(dayString) === 11 || Number(dayString) === 22  || Number(dayString) === 33){
+        edHold = Number(dayString)
+    }else if (Number(dayString > 10)) {
+        mSplit = String(dayString).split('');
+        edHold = eval(mSplit.join('+'));
+    } else {
+        edHold = Number(dayString)
+    }
+    x = sum + edHold;
+    console.log(x)
+    if (x < 10) {
+        x;
+    } else if (x === 10) {
+        x = '10/1';
+    } else if (x === 11) {
+        x = '11/2'
+    } else if (x === 22) {
+        x = '22/4'
+    } else if (x === 33) {
+        x = '33/6'
+    } else {
+        mSplit = String(x).split('');
+        edHold = eval(mSplit.join('+'));
+        x = edHold;
+    }
 
 
 
