--- a/index.html
+++ b/index.html
@@ -413,25 +413,25 @@
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">First</span> Challenge</p>
-            <p id="fCha"></p>
+            <p id="fCha">From Birth to 30/35</p>
             <p id="fChaNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Second</span> Challenge</p>
-            <p id="sCha"></p>
+            <p id="sCha">From 35 to 55/50</p>
             <p id="sChaNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Third</span> Challenge</p>
-            <p id="tCha"></p>
+            <p id="tCha">All your life</p>
             <p id="tChaNum"></p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
             <p > <span class="blue">Fourth</span> Challenge</p>
-            <p id="ftCha"></p>
+            <p id="ftCha">From 55/60 until death</p>
             <p id="ftChaNum"></p>
         </div>
 
