--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                         <p ></p>
                     </div>
                     <div class="s-row padlow" >
-                        <p></p>
-                        <p id="medNum" ></p>                
+                        <p ></p>
+                        <p id="medNum" class="special"></p>                
                     </div>
                 </div>
             </summary>
@@ -161,8 +161,8 @@
                         <p ></p>
                     </div>
                     <div class="s-row padlow" >
-                        <p></p>
-                        <p id="msuhdNum" ></p>               
+                        <p ></p>
+                        <p id="msuhdNum" class="special"></p>               
                     </div>
                 </div>
 
@@ -182,8 +182,8 @@
                         <p ></p>
                     </div>
                     <div class="s-row padlow" >
-                        <p></p>
-                        <p id="mpNum" class=""></p>             
+                        <p ></p>
+                        <p id="mpNum" class="special"></p>             
                     </div>
                 </div>
             </summary>
