--- a/index.html
+++ b/index.html
@@ -459,15 +459,15 @@
         </div>
 
         <div class="cols3-equal lined" >
-            <p >2022</p>
-            <p >February</p>
-            <p >Thursday</p>
+            <p id="cYear">2022</p>
+            <p id="cMonth">February</p>
+            <p id="cDay">Thursday</p>
         </div>
 
         <div class="cols3-equal lined">
-            <p ></p>
-            <p ></p>
-            <p ></p>
+            <p id="cYearNum"></p>
+            <p id="cMonthNum"></p>
+            <p id="cDayNum"></p>
         </div>
 
 
